# ddnet-lint

./: .gitignore  CMakeLists.txt  Makefile  README.md  lint.py  ruff.toml
.github/workflows/: build.yml  ruff.yml
src/: floats.c  lint.c  main.c
src/base/: math.c  str.c  str.h
src/checks/: floats.c  floats.h  func_order.c  func_order.h
